--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,112 @@
 body {
-    background: powderblue;
-  }
+    background-image: url(bimg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 0px 50px 50px 50px;
+}
+
+#root img {
+    width: 350px;
+
+}
+
+h1 {
+    color: white;
+    font-family: 'Carme', sans-serif;
+    /* font-family: 'Lobster', cursive; */
+    font-size: 50px;
+    padding-bottom: 0;
+    padding-left: 5px;
+    margin-bottom: 0;
+}
+
+.View {
+    padding: 0 20px 20px 200px;
+    margin-top: 220px;
+    
+}
+
+p {
+    padding-left: 50px;
+    font-size: 24px;
+    color: white;
+    font-family: 'Carme', sans-serif;
+    /* font-family: 'Lobster', cursive; */
+}
+
+.NavButtons {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.NavButtons a {
+    text-decoration: none;
+    padding: 30px 0 30px 30px;
+    margin: 10px 0 20px 30%;
+    color: white;
+    border: 2px solid;
+    transition: 0.7s;
+    text-align: center;
+    width: 300px;
+    font-size: 24px;
+    border-left: 7px solid;
+}
+
+.NavButtons a:hover {
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    border: inset;
+}
+
+
+@media only screen and (max-width: 700px) {
+    body {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        padding: 10px;
+
+    }
+
+    .View {
+        display: inline;
+        padding: 10px;
+        margin-top: 90px;
+        align-items: center;
+    }
+
+    h1 {
+        font-size: 30px;
+        margin-right: 0;
+        padding-right: 0;
+    }
+
+    p {
+        padding-left: 20px;
+        font-size: 18px;
+    }
+
+    .NavButtons {
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        text-align: center;
+    }
+
+    .NavButtons a {
+        text-decoration: none;
+        padding: 20px 10px 20px 10px;
+        margin: 10px 10px 20px 10px;
+        color: white;
+        border: 2px solid;
+        transition: 0.7s;
+        text-align: center;
+        width: 300px;
+        font-size: 24px;
+        border-left: 7px solid;
+    }
+}
