--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,10 @@ html
     meta(name="theme-color", content="#000000")
     title #{title} | Treck  Traffic
     link(rel="stylesheet" href="./styles.css")
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carme&display=swap" rel="stylesheet">
+
   body
     div#root
       block layout-content
@@ -21,7 +25,6 @@ html
      
      const arch=document.getElementById("archive") 
      arch.addEventListener('click',()=>{
-       alert("Get archives"+document.querySelector("title").innerText)
      },false) 
 
      const exelDb=document.getElementById("excelDb") 
