TRECK TRAFFIC UPDATE
Code refactoring for production release

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,4 +13,5 @@ block layout-content
     div.NavButtons
       a#excelDb(href="./output"  )  Output Database
       a#jsonDb(href="./backup") Database Backup   
-      a#archive(href="./archives") Download Archive
+      a#archive(href="./archives")
+       div.archivefile Download Archive
