refactor project code

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,12 +6,12 @@ block layout-content
   div.View
     div.Message
       div.Title
-        h1 Treck traffic is an automatic google traffic data analyser and archiver
-        p Get to Know about the traffic on our roads
+        h1 Treck traffic automates accessing and archiving traffic data
+        p Helping us Know about traffic conditions on our roads
        
      
     div.NavButtons
-      a#excelDb(href="./output"  )  Output Database
-      a#jsonDb(href="./backup") Database Backup   
+      a#excelDb(href="./output"  )  Dowload as excel file
+      a#jsonDb(href="./backup") Download as Json file  
       a#archive(href="./archives")
-       div.archivefile Download Archive
+       div.archivefile Download as archive
