--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,12 @@ body {
     width: 350px;
 
 }
+.title{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+}
 
 h1 {
     color: white;
@@ -16,21 +22,20 @@ h1 {
     /* font-family: 'Lobster', cursive; */
     font-size: 40px;
     padding-bottom: 0;
-    padding-left: 5px;
     margin-bottom: 0;
-}
+align-self: center;}
 
 .View {
     padding: 0 20px 20px 20px;
-    margin-top: 30px;
+    margin-top: 20px;
     
 }
 
 p {
-    padding-left: 50px;
     font-size: 24px;
     color: white;
     font-family: 'Carme', sans-serif;
+    align-self: center;
     /* font-family: 'Lobster', cursive; */
 }
 
@@ -38,19 +43,25 @@ p {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
+    margin-left: 20%; 
+    width: 60%;
+
 }
 
 .NavButtons a {
     text-decoration: none;
     padding: 20px 0 20px 20px;
-    margin: 10px 0 15px 30%;
-    color: white;
+
+    margin-bottom: 25px;
+   color: white;
     border: 2px solid;
     transition: 0.7s;
     text-align: center;
     width: 300px;
     font-size: 24px;
-    border-left: 7px solid;
+    border-left: 3px solid;
+    border-radius: 50px;
+    align-self: center;
 }
 
 .NavButtons a:hover {
